# CMake_Tutorials

./: README.md  hello.txt
0_CPP_trial_Project/: 0_CPP_trial_Project.pro  CMakeLists.txt  ReadMe.md  main.cpp
0_CPP_trial_Project/include/: class_protected_member.h  myInclude.h
0_CPP_trial_Project/myClasses/: myClass.cpp  myClass.h
0_CPP_trial_Project/myFunctions/: CMakeLists.txt  addMyNo.cpp  addMyNo.h  myFunc.cpp  myFunc.h
